# gratzbot

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  actions.go  config.go  dummy_db_example.json  go.mod  gratzbot.py  main.go  main.py  requests.go  requirements.txt  run.bat  run_example.bat  types.go  users.go  usertypes.py  utils.go  vercel.json
api/: index.py  main.py
app/: ai.py  artifacts.py  bot.py  constants.py  db.py  db_abstract.py  db_csv.py  db_firebase.py  db_json.py  db_mongo.py  index.py  main.py  user.py  utils.py
assets/: commands.json  commands_example.json  config.json
hello/: hello.go
src/: App.cpp  App.hpp  CommandExecutor.cpp  CommandExecutor.hpp  Users.cpp  Users.hpp  env.cpp  env.go  env.hpp  main.cpp  main.go  main.rs  response_handler.go  stocks.go  stocks_test.go  telegram.go  types.go  types.hpp  users.go  utils.go
